tests/paczka1/small_fuzzy/89244717.err
Error in line 3: C9q A220 10,3
Error in line 4: C9q S851 45,8
Error in line 8: 7yDycDt A303 57,5
